--- a/views/suppliers.html
+++ b/views/suppliers.html
@@ -121,7 +121,7 @@
       </div>
     </div>
 
-    <p class="muted">שינויי ספקים ישפיעו על יצירת טופס הזמנות חדש ליום רלוונטי. אם כבר נוצר טופס ליום מסוים, אפשר “לרענן לפי ספקים” (אכין לך כפתור בעתיד אם תרצה).</p>
+    <p class="muted">שינויי ספקים ישפיעו על יצירת טופס הזמנות חדש ליום רלוונטי. אם כבר נוצר טופס ליום מסוים, אפשר “לרענן לפי ספקים” .</p>
   </div>
 
   <script>
