--- a/views/admin-login.html
+++ b/views/admin-login.html
@@ -6,7 +6,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>כניסת מנהל • NEW DELI</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css?v=3" />
   
 <link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#2b5329">
