--- a/views/home.html
+++ b/views/home.html
@@ -7,7 +7,7 @@
 <link rel="apple-touch-icon" href="/icons/icon-192.png">
 
   <title>מערכת ניהול משמרות • דף הבית</title>
-  <link rel="stylesheet" href="/css/style.css" />
+  <link rel="stylesheet" href="/css/style.css?v=3" />
 <meta name="theme-color" content="#2b5329">
   <style>
     body {
